set modprobe option for nbd
Signed-off-by: Blaisonneau David <david.blaisonneau@orange.com>

--- a/roles/vm-managment/tasks/vm_custom.yml
+++ b/roles/vm-managment/tasks/vm_custom.yml
@@ -18,6 +18,7 @@
   modprobe:
     name: nbd
     state: present
+    params: 'max_part=8'
 
 - name: ensure nbd is disconnected
   shell: "qemu-nbd --disconnect /dev/nbd{{ nodes_index[ node.name ] }}"
