specify partition number for nbd
Signed-off-by: Blaisonneau David <david.blaisonneau@orange.com>

--- a/roles/vm-managment/tasks/vm_custom.yml
+++ b/roles/vm-managment/tasks/vm_custom.yml
@@ -18,7 +18,7 @@
   modprobe:
     name: nbd
     state: present
-    params: 'max_part=8'
+    params: 'max_part=15'
 
 - name: ensure nbd is disconnected
   shell: "qemu-nbd --disconnect /dev/nbd{{ nodes_index[ node.name ] }}"
@@ -33,7 +33,7 @@
 
 - name: "connect nbd to vm {}"
   shell:
-    qemu-nbd --connect=/dev/nbd{{ nodes_index[ node.name ] }}
+    qemu-nbd --connect=/dev/nbd{{ nodes_index[ node.name ] }} --partition=1
     /var/lib/libvirt/images/{{ idf.xci.pod_name }}_{{ node.name }}.qcow2
   tags:
     - skip_ansible_lint
