--- a/roles/vm-managment/defaults/main.yml
+++ b/roles/vm-managment/defaults/main.yml
@@ -27,7 +27,7 @@ pkg_required:
 
 # For XCI_hosts, if we want to boot on cloud image
 xci_hosts_image:
-  base_url: https://cloud-images.ubuntu.com/releases/16.04/release/
+  base_url: http://cloud-images.ubuntu.com/releases/16.04/release/
   filename: ubuntu-16.04-server-cloudimg-amd64-disk1.img
   user: ubuntu
   type: debian
