--- a/roles/vm-managment/tasks/start.yml
+++ b/roles/vm-managment/tasks/start.yml
@@ -23,7 +23,7 @@
 
 - name: update ssh known hosts
   shell: >
-    ssh-keygen -f \"{{ known_hosts_file }}\" -R {{ ip }};
+    ssh-keygen -f "{{ known_hosts_file }}" -R {{ ip }};
     ssh-keyscan -t rsa {{ ip }} >> {{ known_hosts_file }};
     ssh {{xci_hosts_user}}@{{ ip }} hostname
   vars:
