--- a/roles/vm-managment/defaults/main.yml
+++ b/roles/vm-managment/defaults/main.yml
@@ -25,7 +25,8 @@ pkg_required:
     - lxml
     - virtualbmc
 
-# For XCI_hosts, if we want to boot on cloud image
+# For XCI_host we create the disk from cloud a image
+# this is the default one in case not set in playbook
 xci_hosts_image:
   base_url: http://cloud-images.ubuntu.com/releases/16.04/release/
   filename: ubuntu-16.04-server-cloudimg-amd64-disk1.img
