update default vars
Signed-off-by: Blaisonneau David <david.blaisonneau@orange.com>

--- a/var/opnfv.yml
+++ b/var/opnfv.yml
@@ -11,14 +11,15 @@
 ##
 # Get variables from env
 ##
-XCI_FLAVOR: "{{ lookup('env','XCI_FLAVOR') | default('mini') }}"
-
+XCI_FLAVOR: "{{ lookup('env','XCI_FLAVOR') if lookup('env','XCI_FLAVOR') != '' \
+                else 'mini') }}"
+OS_FAMILY: "{{ lookup('env','OS_FAMILY') if lookup('env','OS_FAMILY') != '' \
+               else 'debian' }}"
 
 ##
 # Add for bifrost new version
 ##
 
-XCI_OS_FAMILY: "{{ lookup('env','XCI_OS_FAMILY') | default('debian') }}"
 
 # Set xci root (for config, src, logs, venv, bin)
 xci_root: /opt/xci
